# PurpleSector-DjangoCodingChallengeSetup

./: .env.dist  Dockerfile  README.md  pyproject.toml  start.sh
.dev/: Dockerfile  docker-compose.yml  start.sh
api/: settings.py  urls.py
